--- a/angular/bower.json
+++ b/angular/bower.json
@@ -16,6 +16,8 @@
     "angular": "^1.6.4",
     "angular-ui-router": "^1.0.3",
     "angular-bootstrap": "^2.5.0",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "PACE": "pace#^1.0.2",
+    "angular-moment": "^1.0.1"
   }
 }
